[PHOENIX-6125] Added complaint priority and changed receiving mode from enum to entity